// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<h6
  className="sc-bdnylx fAHZBl sinoui-typography sinoui-typography--subtitle1"
  color="textPrimary"
  type="subtitle1"
>
  Subtitle1
</h6>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="sc-bdnylx fAHZBl sinoui-typography sinoui-typography--subtitle1"
    color="textPrimary"
    type="subtitle1"
  >
    Subtitle1
  </h2>,
  <h6
    className="sc-bdnylx eJWFhl sinoui-typography sinoui-typography--subtitle1"
    color="textPrimary"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
  <h6
    className="sc-bdnylx fhnHKI sinoui-typography sinoui-typography--subtitle1"
    color="textPrimary"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
  <h6
    className="sc-bdnylx ghgSjh sinoui-typography sinoui-typography--subtitle1"
    color="success"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
  <h6
    className="sc-bdnylx lhkpDt sinoui-typography sinoui-typography--subtitle1 sinoui-typography--gutter-bottom"
    color="textPrimary"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <h6
    className="sc-bdnylx fAHZBl sinoui-typography sinoui-typography--subtitle1"
    color="textPrimary"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
  <h6
    className="sc-bdnylx dIBgPu sinoui-typography sinoui-typography--subtitle1"
    color="primary"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
  <h6
    className="sc-bdnylx cCQgoh sinoui-typography sinoui-typography--subtitle1"
    color="secondary"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
  <h6
    className="sc-bdnylx fAHZBl sinoui-typography sinoui-typography--subtitle1"
    color="textPrimary"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
  <h6
    className="sc-bdnylx dOAKmE sinoui-typography sinoui-typography--subtitle1"
    color="textSecondary"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
  <h6
    className="sc-bdnylx kzZnhc sinoui-typography sinoui-typography--subtitle1"
    color="error"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
  <h6
    className="sc-bdnylx fJoYBt sinoui-typography sinoui-typography--subtitle1"
    color="warning"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
  <h6
    className="sc-bdnylx ghgSjh sinoui-typography sinoui-typography--subtitle1"
    color="success"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
  <h6
    className="sc-bdnylx ioUlTJ sinoui-typography sinoui-typography--subtitle1"
    color="info"
    type="subtitle1"
  >
    Subtitle1
  </h6>,
]
`;
